{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 80,
  "lineage": "24af4b5c-d551-9647-9cf0-a6444f7dc420",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:714558904912:internet-gateway/igw-0f622392ac21631ee",
            "id": "igw-0f622392ac21631ee",
            "owner_id": "714558904912",
            "tags": {
              "Name": "Terraform Training",
              "Owner": "Jagdish"
            },
            "tags_all": {
              "Name": "Terraform Training",
              "Owner": "Jagdish"
            },
            "vpc_id": "vpc-097f6272637f8cc21"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f622392ac21631ee",
            "id": "r-rtb-0b36fa5166ee400821080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b36fa5166ee40082",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:714558904912:route-table/rtb-0320a4a02217f856b",
            "id": "rtb-0320a4a02217f856b",
            "owner_id": "714558904912",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private - RTB"
            },
            "tags_all": {
              "Name": "Private - RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f6272637f8cc21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:714558904912:route-table/rtb-0b36fa5166ee40082",
            "id": "rtb-0b36fa5166ee40082",
            "owner_id": "714558904912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f622392ac21631ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public - RTB"
            },
            "tags_all": {
              "Name": "Public - RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f6272637f8cc21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097bcdcce50413550",
            "route_table_id": "rtb-0320a4a02217f856b",
            "subnet_id": "subnet-0ff4c7f4bd7745ece"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfa2a25b08a24c84",
            "route_table_id": "rtb-0320a4a02217f856b",
            "subnet_id": "subnet-039348fa84951cc68"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c133514cb5d6ebb",
            "route_table_id": "rtb-0b36fa5166ee40082",
            "subnet_id": "subnet-030c373406ce6be8d"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a057e14b52a274f9",
            "route_table_id": "rtb-0b36fa5166ee40082",
            "subnet_id": "subnet-013a747266cf304c6"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5309661d9d803c8",
            "route_table_id": "rtb-0b36fa5166ee40082",
            "subnet_id": "subnet-025b2a4a05168fc48"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:714558904912:subnet/subnet-0ff4c7f4bd7745ece",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "170.0.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff4c7f4bd7745ece",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714558904912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet - 1",
              "Owner": "Jagdish",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "Private Subnet - 1",
              "Owner": "Jagdish",
              "Type": "Private"
            },
            "vpc_id": "vpc-097f6272637f8cc21"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:714558904912:subnet/subnet-039348fa84951cc68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "170.0.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039348fa84951cc68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714558904912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet - 2",
              "Owner": "Jagdish",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "Private Subnet - 2",
              "Owner": "Jagdish",
              "Type": "Private"
            },
            "vpc_id": "vpc-097f6272637f8cc21"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:714558904912:subnet/subnet-030c373406ce6be8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "170.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030c373406ce6be8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714558904912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet - 1",
              "Owner": "Jagdish",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Public Subnet - 1",
              "Owner": "Jagdish",
              "Type": "Public"
            },
            "vpc_id": "vpc-097f6272637f8cc21"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:714558904912:subnet/subnet-013a747266cf304c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "170.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013a747266cf304c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714558904912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet - 2",
              "Owner": "Jagdish",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Public Subnet - 2",
              "Owner": "Jagdish",
              "Type": "Public"
            },
            "vpc_id": "vpc-097f6272637f8cc21"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:714558904912:subnet/subnet-025b2a4a05168fc48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "170.0.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025b2a4a05168fc48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "714558904912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet - 3",
              "Owner": "Jagdish",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Public Subnet - 3",
              "Owner": "Jagdish",
              "Type": "Public"
            },
            "vpc_id": "vpc-097f6272637f8cc21"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:714558904912:vpc/vpc-097f6272637f8cc21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "170.0.0.0/16",
            "default_network_acl_id": "acl-0594a40835d0706ac",
            "default_route_table_id": "rtb-0042a143f9298c0a2",
            "default_security_group_id": "sg-050b77ff50d2b5700",
            "dhcp_options_id": "dopt-0aa4c5ab4616cc632",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": true,
            "id": "vpc-097f6272637f8cc21",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0042a143f9298c0a2",
            "owner_id": "714558904912",
            "tags": {
              "Batch": "November 2023",
              "Name": "Terraform Training"
            },
            "tags_all": {
              "Batch": "November 2023",
              "Name": "Terraform Training"
            }
          }
        }
      ]
    }
  ]
}